# InvestAllies

./: .gitignore  command.txt  main.py  manage.py  notes.txt  pyproject.toml
InvestAllies/: asgi.py  settings.py  urls.py  wsgi.py
app/: admin.py  apps.py  context_processors.py  models.py  tests.py  translation.py  urls.py  views.py
app/management/commands/: populate_translation_slugs.py  seed_fake_data.py
app/migrations/: 0001_initial.py  0002_article_content_ar_article_content_de_and_more.py  0003_sociallink.py  0004_article_slug.py  0005_article_slug_ar_article_slug_de_article_slug_en_and_more.py  0006_rename_content_zh_article_content_zh_hans_and_more.py  0007_article_meta_description_article_meta_description_ar_and_more.py
app/templates/app/: article_detail.html  base.html  country_articles.html  country_detail.html  country_objects.html  fuel_articles.html  fuel_calculator.html  fuel_index.html  fuel_offers.html  fuel_price.html  gold_articles.html  gold_buy.html  gold_calculator.html  gold_index.html  gold_price.html  home.html  investments_index.html  landing_page.html  legal_articles.html  legal_index.html  object_detail.html  offshore_index.html  offshore_jurisdictions.html  offshore_services.html  search.html  service_detail.html  services_index.html  subscribe.html  subscribe_thanks.html
locale/ar/LC_MESSAGES/: django.mo  django.po
locale/de/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
static/css/: styles.css
(+2 files in other folders)
